@@ -1,3 +1,12 @@
+TAG: homologyload-tr11886-4
+DATE: 12/24/2014
+STAFF: sc
+CHANGES:
+1) homologeneload.config.default - updated  *homology* to *homologene*
+2) bin/homologeneload.sh - updated runQC.sh to preprocessHomologene.sh, 
+	updated homologyload.config to homologeneload.config
+	updated homologyload.py to homologeneload.py
+
 TAG: homologyload-tr11886-3
 TAG: homologyload-tr11886-2
 DATE: 12/24/2014
